--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -526,11 +526,82 @@ section#products {
    padding: 0;
    margin: 16px 0 32px 0;
 }
+.btnFiltro {
+   float: right;
+   background-color: rgba(0, 0, 0, .36);
+   color: #FFF;
+   border-radius: 10px;
+   padding: 4px 28px;
+   text-decoration: none;
+   border: none;
+   font-weight: 700;
+   font-size: 16px;
+   letter-spacing: 1.2px;
+}
 .filtroActive {
    background-color: #319B42;
    padding: 10px 25px;
    border-radius: 10px;
    color: #FFF !important;
+}
+.modal-dialog {
+   top: 25%;
+}
+.modal-content {
+   border: none;
+   border-radius: 10px;
+}
+.modal-header {
+   border: none;
+   padding-bottom: 0;
+}
+.modal-body {
+   padding: 0 16px;
+}
+.modal-title {
+   color: #000;
+   font-weight: 700;
+   font-size: 28px;
+}
+.limpaFiltro {
+   color: #139B42;
+   position: absolute;
+   right: 16px;
+   top: 25px;
+   font-size: 18px;
+   font-weight: 700;
+}
+.filtroMobile {
+   list-style: none;
+   padding: 0;
+   margin: 0;
+}
+.filtroMobileItem {
+   background-color: rgba(0, 0, 0, .26);
+   color: #000;
+   text-align: center;
+   border-radius: 6px;
+   padding: 4px 0;
+   margin: 12px 0;
+}
+.filtroMobActive {
+   background-color: #139B42;
+   color: #FFF;
+}
+.modal-footer {
+   border: none;
+   padding-top: 0;
+   padding-top: 8px;
+}
+.btnFiltroMobile {
+   margin: 0 auto;
+   background-color: #139B42;
+   color: #FFF;
+   padding: 8px 0;
+   border: none;
+   border-radius: 10px;
+   text-decoration: none;
+   width: 65%;
 }
 /* Product */
 section#product {
