--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1045,3 +1045,61 @@ a.navbar-toggler {
    left: 50%;
    transform: translate(-50%, -50%);
 }
+
+/* Alerta */
+.overlayNotifica {
+   width: 100%;
+   height: 100vh;
+   z-index: 999;
+   position: fixed;
+   display: none;
+}
+.toast__container {
+   display: block;
+   width: 100%;
+}
+.toast {
+   text-align: left;
+   padding: .75rem 1.25rem;
+   background-color: #fff;
+   border-radius: 7px;
+   top: 80px;
+   position: relative;
+   box-shadow: 1px 7px 14px -5px rgba(0,0,0,0.2);
+   margin: 0 auto;
+}
+.toast--red {
+   background-color: #f8d7da;
+   border-color: #f5c6cb;
+}
+.toast--green {
+   background-color: #d4edda;
+   border-color: #c3e6cb;
+}
+.toast__content {
+   padding-left: 20px;
+   padding-right: 20px;
+}
+.toast__type {
+   color: #000;
+   font-weight: 700;
+   margin-top: 0;
+   margin-bottom: 8px;
+}
+.toast__message {
+   font-size: 14px;
+   margin-top: 0;
+   margin-bottom: 0;
+   color: #000;
+}
+.toast__close {
+   position: absolute;
+   right: 22px;
+   top: 50%;
+   font-size: 18px;
+   cursor: pointer;
+   height: 18px;
+   transform: translateY(-50%);
+   color: #000;
+   font-weight: 700;
+}
